--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,5 +30,7 @@ services:
         condition: service_healthy
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/lanchonete_db?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+      COGNITO_CLIENT_ID: 6bftd8qtj6gos5odilitsaapao
+      COGNITO_USER_POOL_ID: us-east-1_TDdX2HfK1
     ports:
       - "8080:8080"
